# myangler-web

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  vitest.config.ts
LICENSES/: data-sources.md
app/: globals.css  layout.tsx  manifest.ts  page.tsx
app/components/: Button.test.tsx  Button.tsx  Card.test.tsx  Card.tsx  Chip.test.tsx  Chip.tsx  EntryDetail.test.tsx  EntryDetail.tsx  Icon.test.tsx  Icon.tsx  InstallGuide.test.tsx  InstallGuide.tsx  Logo.test.tsx  Logo.tsx  Ornament.test.tsx  Ornament.tsx  ResultRow.test.tsx  ResultRow.tsx  SearchInput.test.tsx  SearchInput.tsx  Sheet.test.tsx  Sheet.tsx  TabBar.test.tsx  TabBar.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx  Toast.test.tsx  Toast.tsx  WordBlock.test.tsx  WordBlock.tsx  WordOfTheDay.test.tsx  WordOfTheDay.tsx
app/lib/app/: engine-context.test.tsx  engine-context.tsx  install-prompt.test.ts  install-prompt.ts  pos.test.ts  pos.ts  preferences.test.ts  preferences.ts  storage.test.ts  storage.ts  types.ts  wordOfTheDay.test.ts  wordOfTheDay.ts
app/lib/lookup/: README.md  bktree.test.ts  bktree.ts  burmeseSearch.ts  dataAssets.generated.ts  englishSegment.test.ts  englishSegment.ts  forward.ts  index.ts  loader.test.ts  loader.ts  (+7 more)
app/system/: page.tsx
app/views/: AppShell.test.tsx  AppShell.tsx  FavoritesView.test.tsx  FavoritesView.tsx  HistoryView.test.tsx  HistoryView.tsx  SearchContent.test.tsx  SearchContent.tsx  SettingsView.test.tsx  SettingsView.tsx
docs/: burmese-dictionary-spec.md
scripts/: deploy.sh
terraform/: README.md  acm.tf  cloudfront.tf  data.tf  locals.tf  outputs.tf  providers.tf  route53.tf  s3.tf  variables.tf
terraform/cloudfront-functions/: rewrite-uri.js
tools/data-pipeline/: .gitignore  README.md  pyproject.toml
tools/data-pipeline/reference/: README.md
tools/data-pipeline/scripts/: download_engmyan.py
tools/data-pipeline/src/data_pipeline/: __init__.py  __main__.py  bktree.py  cli.py  config.py  io.py  syllable.py
tools/data-pipeline/src/data_pipeline/steps/: __init__.py  bktree_en.py  bktree_my.py  build_db.py  convert_ngram.py  engmyan.py  index_en.py  merge.py  report.py  strip.py  version.py
tools/data-pipeline/tests/: test_all_pipeline.py  test_bktree.py  test_build_db.py  test_convert_ngram.py  test_engmyan.py  test_index_en.py  test_merge.py  test_reference_myword.py  test_smoke.py  test_strip.py  test_syllable.py  test_syllable_corpus.py
(+29 files in other folders)
