[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-pipeline"
version = "0.1.0"
description = "Build-time tool that transforms raw Burmese Wiktionary data into the static assets shipped by the myangler-web PWA."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "myangler-web" }]

# Runtime dependencies are intentionally empty at the scaffold stage.
# Later tasks will add the language-processing libraries they need
# (e.g. myWord segmenter helpers, Burmese tokenization, IPA tooling).
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
data-pipeline = "data_pipeline.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/data_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
